fix(map): Fix vertical scrollbar not showing up in code edit (#16625)
Closes #16327

--- a/common/app/routes/Challenges/views/classic/classic.less
+++ b/common/app/routes/Challenges/views/classic/classic.less
@@ -4,7 +4,6 @@
 // challenge panes are bound to the pane size which in turn is
 // bound to the total height minus navbar height
 .max-element-height() {
-  height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
 }
